@@ -1,3 +1,6 @@
+2007-04-07 Marco Antonio Islas Cruz <markuz@islascruz.org>
+	* libchristine/Christine.py.in:
+		- Finished the import and initialization of dbus
 2007-04-06 Marco Antonio Islas Cruz <markuz@islascruz.org>
 	* libchristine/Christine.py.in:
 		- Support for internet radio stations that use the 
